--- a/src/pages/Home/FibonacciSection/index.scss
+++ b/src/pages/Home/FibonacciSection/index.scss
@@ -144,68 +144,32 @@ $border: 3px solid $primary-color;
   .line {
     height: 5px;
     background-color: $secondary-color;
+    animation: 0.3s ease-out 0s 1 slideInFromLeft;
   }
 
   .line-mantra {
     width: 36%;
-    animation: 0.3s ease-out 0s 1 slideInFromLeft36;
+    max-width: 36%;
   }
 
   .line-grindin {
     width: 90%;
-    animation: 0.3s ease-out 0s 1 slideInFromLeft90;
+    max-width: 90%;
   }
 
   .line-say-what,
   .line-real-news,
   .line-pinch-me {
     width: 95%;
-    animation: 0.3s ease-out 0s 1 slideInFromLeft95;
+    max-width: 95%;
   }
 
   .line-dream-dinner {
     width: 88%;
-    animation: 0.3s ease-out 0s 1 slideInFromLeft88;
+    max-width: 88%;
   }
 }
 
 .FibonacciComponent:hover {
   background-color: $hover-background-color;
-}
-
-@keyframes slideInFromLeft36 {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 36%;
-  }
-}
-
-@keyframes slideInFromLeft88 {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 88%;
-  }
-}
-
-
-@keyframes slideInFromLeft90 {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 90%;
-  }
-}
-
-@keyframes slideInFromLeft95 {
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 95%;
-  }
 }
